[gd_scene load_steps=2 format=2]

[ext_resource path="res://2dthing/HUD.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MoveCounter" type="Label" parent="."]
margin_top = 102.0
margin_right = 77.0
margin_bottom = 124.0
text = "Moves:"

[node name="TimeCounter" type="Label" parent="."]
margin_left = 2.0
margin_top = 125.0
margin_right = 70.0
margin_bottom = 155.0
text = "Time:"

[node name="StartButton" type="Button" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 200.0
text = "Start Game"

[node name="ResetButton" type="Button" parent="."]
visible = false
margin_left = 6.0
margin_top = 146.0
margin_right = 62.0
margin_bottom = 199.0
text = "Reset"

[node name="QuitButton" type="Button" parent="."]
margin_left = 2.0
margin_top = 270.0
margin_right = 91.0
margin_bottom = 323.0
text = "Quit to Title"

[node name="WinMessage" type="Label" parent="."]
visible = false
margin_left = 344.0
margin_top = 188.0
margin_right = 648.0
margin_bottom = 402.0
text = "Lalalala"
align = 1
valign = 1

[node name="UndoButton" type="Button" parent="."]
visible = false
margin_left = 7.0
margin_top = 207.0
margin_right = 62.0
margin_bottom = 255.0
text = "Undo"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UndoButton" to="." method="_on_UndoButton_pressed"]
